2008-07-07  Andrew John Hughes  <gnu_andrew@member.fsf.org>

	* src/gnu/supplementgen/Main.java:
	Add support for generating metazones.properties.
	(CurrencyInfo.equals(Object)): Implemented.
	(CurrencyInfo.hashCode()): Likewise.
	(ZoneInfo): New class to act as a key for zone info.
	(SupplementalHandler.SupplementalHandler(PrintWriter,PrintWriter,PrintWriter)):
	Add new print writer for metazones.properties.
	(SupplementalHandler.endElement(String,String,String)):
	Output zone data.
	(SupplementalHandler.startDocument()): Add header for metazones.properties.
	(SupplementalHandler.startElement(String,String,String,Attributes)):
	Collect zone data.

2008-07-07  Andrew John Hughes  <gnu_andrew@member.fsf.org>

	* Makefile.am: Replace currencygen with supplementgen.
	* bin/currencygen.in: Renamed to...
	* bin/supplementgen.in: ...this.
	* configure.ac: Replace currencygen with supplementgen.
	* src/gnu/currencygen/Main.java: Renamed to...
	* src/gnu/supplementgen/Main.java: ...this and
	updated version/copyright output.

2008-07-07  Andrew John Hughes  <gnu_andrew@member.fsf.org>

	* src/gnu/currencygen/Main.java:
	Output week data to weeks.properties.
	(SupplementalHandler.SupplementalHandler(PrintWriter,PrintWriter)):
	Add new print writer for weeks.properties.
	(SupplementalHandler.endElement(String,String,String)):
	Output week data.
	(SupplementalHandler.startDocument()): Add header for weeks.properties.
	(SupplementalHandler.startElement(String,String,String,Attributes)):
	Collect week data.
	
2008-07-06  Andrew John Hughes  <gnu_andrew@member.fsf.org>

	* src/gnu/ldml/Analyzer.java:
	(fetchResource(AliasElement)):
	Add element name to error message.
	* src/gnu/localegen/PropertiesGenerator.java,
	(convertToJavaString(String)): Output Unicode characters
	using \u syntax.
	(ManualListContent.generateContent(PrintWriter)): Likewise.
	(OrderedListContent.generateContent(PrintWriter)): Likewise.
	(TimeZoneContent.generateContent(PrintWriter)): Likewise.
	